--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "redux": "^4.0.0"
   },
   "dependencies": {
+    "axios": "^0.18.0",
     "bulma": "^0.7.1",
     "react": "^16.4.0",
     "react-dom": "^16.4.0"
